Fixed the Exam tag to be aligned vertically by adjusting class for the component.

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -59,6 +59,7 @@
 }
 
 .block-label-exam {
+  align-self: auto;
   border-color: var(--quaternary-color);
   color: var(--quaternary-color);
 }
